# multipliciteam

./: README.md
armGame/: CMakeLists.txt  package.xml
armGame/launch/: viewArm.launch
armGame/rviz/: viewkuka.rviz  viewpanda.rviz
armGame/urdf/: kr16_2.urdf  kr210l150.urdf  kuka.urdf  panda_arm.urdf
arm_game/: CMakeLists.txt  package.xml
arm_game/config/: 9dof_kuka_control_parameters.yaml  kuka_control_parameters.yaml
arm_game/launch/: 9dof_quasi-static_gazebo.launch  9dof_viewArm.launch  gazebo_plain.launch  quasi-static_gazebo.launch  real_time_quasi-static_gazebo.launch  viewArm.launch  viewArm_9dof.launch
arm_game/meshes/iiwa7/collision/: bucket.SLDPRT  bucket.STL
arm_game/meshes/iiwa7/visual/: bucket.STL
arm_game/rviz/: viewkuka.rviz
arm_game/scripts/: 2_dof_quasi-static_traj_gen.py  9_dof_quasi-static_traj_gen.py  arm_trajectory_generator.py  asteroid_generator.py  desired_T.py  kinematics.py  moving_arm_traj_gen.py  quasi-static_traj_gen.py  splines.py
arm_game/urdf/: iiwa.gazebo.xacro.bak  iiwa.gazebo.xacro_9dof.bak  iiwa.gazebo_9dof.xacro  iiwa.transmission_9dof.xacro  iiwa7.urdf.xacro  iiwa7.xacro  iiwa7.xacro.bak  iiwa7_9dof.urdf.xacro  iiwa7_9dof.xacro  iiwa7_9dof.xacro.bak  kr16_2.urdf  kr210l150.urdf  kuka.urdf  kuka_new.urdf  kuka_old.urdf  materials.xacro  panda_arm.urdf  utilities.xacro
arm_game/worlds/: realtime.world  slowtime.world
robot_files/franka_description/robots/: dual_panda_example.urdf  panda_arm.urdf
robot_files/kuka_experimental/kuka_kr210_support/urdf/: kr210l150.urdf
